--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@swimlane/ngx-charts": "^20.1.0",
     "@types/d3": "^7.4.0",
     "@types/leaflet": "^1.7.11",
