--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/d3": "^7.4.0",
     "@types/leaflet": "^1.7.11",
     "leaflet": "^1.8.0",
+    "lodash": "^4.17.21",
     "ngx-spinner": "13.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
